--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-    <meta charset="UTF-8">
     <title>Microeventos</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <h1>Bienvenido a Microeventos</h1>
+    <a href="/login">Iniciar sesión</a> | <a href="/register">Registrarse</a>
 </body>
 </html>
