leve correccion a al redireccionamiento a login y a register

--- a/templates/register.html
+++ b/templates/register.html
@@ -38,7 +38,7 @@
     <button type="submit" class="btn btn-primary w-100">Registrarse</button>
   </form>
   <div class="secondary-links">
-    <a href="/login">Volver al login</a>
+    <a href="login.html">Volver al login</a>
   </div>
 </div>
 
