--- a/templates/login.html
+++ b/templates/login.html
@@ -31,7 +31,7 @@
   </form>
 
   <div class="secondary-links">
-    <a href="/register">Crear cuenta</a>
+    <a href="register.html">Crear cuenta</a>
   </div>
 </div>
 
